[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asteroids-game"
version = "1.0.0"
description = "A Python/Pygame implementation of the classic Asteroids arcade game with modern features"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Boot.dev", email = "support@boot.dev"}
]
license = {text = "MIT"}
keywords = ["game", "pygame", "asteroids", "arcade"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: French",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Arcade",
]

dependencies = [
    "pygame==2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/bootdotdev/asteroids_game"
Repository = "https://github.com/bootdotdev/asteroids_game.git"
Issues = "https://github.com/bootdotdev/asteroids_game/issues"

[project.scripts]
asteroids = "asteroids.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/asteroids"]
